fix: 💄 footer styles on smaller screens
* elements were not aligned
* order of elements was incorrect

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,12 +8,17 @@
 .content {
   position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   gap: 64px;
   width: 100%;
   max-width: var(--content-width);
   padding-bottom: 48px;
+}
+
+@media (max-width:35rem) {
+  .content {
+  flex-direction: column-reverse;
+  }
 }
 
 .attribution {
@@ -43,6 +48,7 @@ div .attribution + .attribution {
 }
 
 .linkHeading {
+  margin-top: 0;
   font-size: 1.25rem;
 }
 
